<resources>
    <string name="app_name">MIS Mobile</string>

    <string name="data_entry">SERIAL COLLECTOR</string>
    <string name="data_entry_title">My Vouchers</string>
    <string name="send_data">SEND DATA</string>
    <string name="send_data_title">Send Data</string>
    <string name="add_serial_title">Serials Collector</string>
    <string name="read_voucher">IMPORT Data</string>
    <string name="read_voucher_title">Import Vouchers</string>
    <string name="voucher_serial">Serial</string>
    <string name="vouchers">Vouchers</string>
    <string name="voucher_hdr">Voucher Header</string>
    <string name="voucher_dtl">Voucher Details</string>
    <string name="voucher_date">Date</string>
    <string name="QTY">QTY</string>
    <string name="note">Notes</string>
    <string name="ItemName">Item Name</string>
    <string name="ItemCode">Item Code</string>
    <string name="PartNo">Part Number</string>
    <string name="voucher_ID">Voucher ID</string>
    <string name="voucher_type">Voucher Type</string>
    <string name="Trans_Code">Trans Code</string>
    <string name="serials">Serials</string>
    <string name="serials_count">Serials Count</string>
    <string name="About_App">About</string>
    <string name="dialog_message">This Application is to Collect Product Serials and Send it direct to MIS Main system.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="donate_message">If you like this Application, please help us by Rating more places </string>
    <string name="serial_number">Serial number</string>
    <string name="init_db">Initialize DataBase</string>
    <string name="system_setting">System Setting</string>
    <string name="Exit">Exit</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share File</string>
    <string name="settings">Setting</string>
    <string name="choose_menu">Choose a Menu Option</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="Profile_Picture">Profile Picture for System User</string>
    <string name="notification_pic">notification icon picture</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="website">Website</string>
    <string name="company_name">Company name</string>
    <string name="server_name">Server name</string>
    <string name="database">DataBase name</string>
    <string name="branch_code">Branch Code</string>
    <string name="user_name">User Name</string>
    <string name="db_user_name">DataBase User Name</string>
    <string name="db_setting"> DataBase Connection Settings</string>
    <string name="double_dot"> : </string>
    <string name="zero">0</string>
    <string name="branch_name">Branch Name</string>
    <string name="start_date">Voucher Start Date</string>
    <string name="date_picker_title">Voucher Start Date</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="add_new_company">Add New Company</string>
    <string name="all_companies">All Companies</string>
    <string name="no_company_in_the_database_create_new_one_by_clicking_the_add_button_at_the_top_right">No company in the database. create new one by clicking the add button at the top right</string>
    <string name="empty_fields_message">One or more fields are empty</string>
    <string name="salary">Salary</string>
    <string name="all_employees">All Employees</string>
    <string name="no_employee_working_for_this_company_add_a_new_one_by_clicking_the_add_button_on_the_top_right">No employee working for this company. Add a new one by clicking the add button on the top right</string>
    <string name="add_new_employee">Add New Employee</string>
    <string name="select_a_company">Select a company</string>
    <string name="select_Date">Voucher Date</string>
    <string name="delete">Delete</string>
    <string name="company_deleted_successfully">Company deleted successfully</string>
    <string name="employee_deleted_successfully">Employee deleted successfully</string>
    <string name="analog_key_mode_output">Analog Key Mode Output</string>
    <string name="broadcast_mode_output">Broadcast Mode Output</string>
    <string name="direct_fill_mode_output">Direct Fill Mode Output</string>
    <string name="broadcast_output_result_display_area">scanner display area</string>
    <string name="result_display_area_of_analog_key_output">result display area of Scanner </string>
    <string name="empty">Clear All</string>
    <string name="communicate">Communicate</string>
    <string name="backslash">/</string>
    <string name="yes">YES</string>
    <string name="doubledot">:</string>
    <string name="import_vouchers">Import Vouchers</string>
    <string name="created_vouchers">Created Vouchers</string>
    <string name="send_voucher">Send Voucher</string>
    <string name="system_status">System Status</string>
    <string name="notifications">Notifications</string>
    <string name="Date_time">10.10   00/00/ 0000</string>
    <string name="notification">Notifications</string>
    <string name="log_activity">Log Activities</string>
    <string name="sent_vouchers">Sent Vouchers</string>
    <string name="total_serials">Total Serials</string>
    <string name="total_items">Total Items</string>
    <string name="title_activity_create_voucher">CreateVoucher</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
