<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Activity.MainActivity"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/choose_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/header_margin"
        android:paddingRight="@dimen/header_margin"
        android:paddingLeft="@dimen/header_margin"
        android:paddingBottom="@dimen/header_bottom_margin"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="clip_horizontal" />
    <Button
        android:id="@+id/button_data_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_entry"/>

    <Button
        android:id="@+id/button_send_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_data"/>

    <Button
        android:id="@+id/button_read_voucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_voucher"/>

    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit"/>
</LinearLayout>

