<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:gravity="center_vertical">

    <TableLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >
        <TableRow         android:visibility="gone"
            >


            <TextView android:text="@string/voucher_serial"/>
            <TextView android:text="@string/double_dot"/>

            <TextView
                android:id="@+id/voucher_serial1_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voucher_serial"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                />

        </TableRow>
        <TableRow
            android:visibility="gone"
            >
            <TextView android:text="@string/voucher_ID"/>
            <TextView android:text="@string/double_dot"/>

            <TextView
                android:id="@+id/voucher_ID_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/voucher_ID"
                android:textColor="@android:color/black" />

        </TableRow>
        <TableRow>
            <TextView android:text="@string/ItemName"/>
            <TextView android:text="@string/double_dot"/>

            <TextView
                android:id="@+id/Item_Name_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ItemName"
                android:textColor="@android:color/black"
                />

        </TableRow>
        <TableRow>
            <TextView android:text="@string/PartNo"/>
            <TextView android:text="@string/double_dot"/>

            <TextView
                android:id="@+id/Part_No_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/PartNo"
                android:textColor="@android:color/black"
                />

        </TableRow>
        <TableRow>

            <TextView android:text="@string/ItemCode"/>
            <TextView android:text="@string/double_dot"/>

            <TextView
                android:id="@+id/Item_Code_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/medium_text"
                android:text="@string/ItemCode"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/QTY"/>
            <TextView android:text="@string/double_dot"/>

            <TextView
                android:id="@+id/voucher_QTY_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/medium_text"
                android:text="@string/QTY"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                />
        </TableRow>
    </TableLayout>

    <CheckBox
        android:visibility="invisible"
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end" />
</FrameLayout>