<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="com.saudisoft.mis_android.Activity.SettingActivity" >
<android.support.v7.widget.AppCompatTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Please Enter Connection Settings"
    android:textColor="@color/red_bg_header"
    android:textSize="@dimen/large_text"
    />
    <EditText
        android:id="@+id/txt_server_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server_name"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_branch_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_server_name"
        android:layout_marginTop="8dp"
        android:hint="@string/branch_code"
        android:inputType="text"
        android:lines="2"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/txt_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_branch_code"
        android:layout_marginTop="8dp"
        android:hint="@string/database"
        android:inputType="text"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/black" />



    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_database"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingBottom="2dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="2dp"
        android:text="@string/save"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <ListView
        android:id="@+id/list_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_save"
        android:layout_margin="4dp"
        android:dividerHeight="0.5dp"
 />

</RelativeLayout>
