<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@drawable/whback"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:padding="20dp"
        android:paddingTop="30dp"

        >


    <ImageView
        android:id="@+id/textGrid"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_profile_img"
        android:contentDescription="@string/Profile_Picture"
        />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textGrid"
        android:layout_toRightOf="@+id/textGrid"

        >

        <TextView
            android:id="@+id/user_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="start"

            />

        <TextView
            android:id="@+id/branch_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name_txt"
            android:text="@string/branch_name"
            android:textColor="@android:color/white"
            android:textSize="15sp"

            />
    </RelativeLayout>
    </RelativeLayout>


</RelativeLayout>