<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <!--<TextView-->
        <!--android:id="@+id/label"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:gravity="center_vertical"-->
        <!--android:padding="10dp"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:textSize="15sp" />-->


    <!--<CheckBox-->
        <!--android:id="@+id/checkbox"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkbox1"
        android:layout_marginRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <TableLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">
    <TableRow>


        <TextView android:text="@string/voucher_serial"/>
        <TextView android:text="   :   "/>

        <TextView
            android:id="@+id/voucher_serial_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/voucher_serial"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

    </TableRow>
    <TableRow>
        <TextView android:text="@string/voucher_type"/>
        <TextView android:text="   :   "/>
        <TextView
            android:id="@+id/voucher_type_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/voucher_type"
            android:textColor="@android:color/black"
            />

    </TableRow>
    <TableRow>
        <TextView android:text="@string/Trans_Code"/>
        <TextView android:text="   :   "/>
        <TextView
            android:id="@+id/trans_Code_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Trans_Code"
            android:textColor="@android:color/black"
            />

    </TableRow>
    <TableRow>

        <TextView android:text="@string/voucher_date"/>
        <TextView android:text="   :   "/>
        <TextView
            android:id="@+id/voucher_date_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/medium_text"
            android:text="@string/voucher_date"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />
    </TableRow>


</TableLayout>
</RelativeLayout>